--- a/index.html
+++ b/index.html
@@ -366,8 +366,10 @@
   filter: contrast(1.08) sharpen(1);
 }
 /* nome */
-.about-name{
-  margin-top: 14px;
+.about-name {
+  display: inline-flex;        /* flex horizontal só para o nome + contactos */
+  align-items: baseline;       /* alinha verticalmente */
+  gap: 16px;                   /* espaço entre nome e contactos */
   font-family: "Bebas Kai", system-ui, sans-serif;
   letter-spacing: .18em;
   font-size: 1rem;
@@ -375,15 +377,13 @@
   text-transform: uppercase;
 }
 
-/* bloco contacto */
+/* contactos em linha */
 .about-contact {
-  margin-top: 8px;        /* pequeno espaçamento abaixo do nome */
-  display: flex;           /* coloca os contactos em linha */
-  flex-wrap: wrap;         /* permite quebra em telas pequenas */
-  gap: 16px;               /* espaço horizontal entre contactos */
+  display: flex;
+  gap: 16px;
+  margin-top: 0; /* remove o espaçamento vertical */
   font-size: .9rem;
   color: var(--muted2);
-  align-items: baseline;   /* alinha verticalmente com o nome/texto */
 }
 
 /* cada linha */
