--- a/index.html
+++ b/index.html
@@ -364,6 +364,10 @@
   border-radius: 50%; /* Isso cria o efeito circular */
   opacity: .92;
   filter: contrast(1.08) sharpen(1);
+  display: flex;
+  flex-direction: column; /* foto em cima, nome + contactos abaixo */
+  align-items: flex-start;
+  gap: 12px;
 }
 /* nome */
 .about-name {
