--- a/index.html
+++ b/index.html
@@ -334,25 +334,17 @@
   margin: 0 auto;
   display: flex;
   align-items: flex-start;
-  gap: 40px;
+  gap: 20px;
 }
 /* coluna da foto */
 .about-photo-col{
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  flex-shrink: 0; /* não deixa empurrar o texto */
+  display: grid;
+  grid-template-columns: auto 1fr; /* nome | contactos */
+  column-gap: 18px;
+  align-items: baseline;
   
 }  
 
-/* nome */
-.about-name{
-  margin-top: 14px;
-  font-family: "Bebas Kai", system-ui, sans-serif;
-  letter-spacing: .18em;
-  font-size: 2rem;
-  color: var(--muted);
-  text-transform: uppercase;
 }
 
 /* photo */
@@ -369,11 +361,15 @@
   align-items: flex-start;
   gap: 12px;
 }
-/* nome */
-.about-name {
-  display: inline-flex;        /* flex horizontal só para o nome + contactos */
-  align-items: baseline;       /* alinha verticalmente */
-  gap: 16px;                   /* espaço entre nome e contactos */
+//* cria uma linha comum para nome + contactos */
+.about-name{
+  display: grid;
+  grid-template-columns: auto 1fr; /* nome | contactos */
+  column-gap: 18px;
+  align-items: baseline;
+
+  margin-top: 14px;
+
   font-family: "Bebas Kai", system-ui, sans-serif;
   letter-spacing: .18em;
   font-size: 1rem;
@@ -381,44 +377,20 @@
   text-transform: uppercase;
 }
 
-/* contactos em linha */
-.about-contact {
+/* força os contactos a “entrarem” na linha do nome */
+.about-contact{
   display: flex;
   gap: 16px;
-  margin-top: 0; /* remove o espaçamento vertical */
+  margin: 0;
   font-size: .9rem;
   color: var(--muted2);
 }
 
-/* cada linha */
+/* cada item continua normal */
 .contact-item{
   display: flex;
   align-items: center;
-  gap: 8px; /* espaço entre símbolo e texto */
-}
-
-/* ícones */
-.contact-item .icon{
-  font-size: .85rem;
-  opacity: .75;
-}
-
-/* links */
-.contact-item a{
-  color: inherit;
-  text-decoration: none;
-  border-bottom: 1px solid transparent;
-}
-
-.contact-item a:hover{
-  border-bottom-color: var(--muted2);
-}
-/* text */
-.about-text{
-  max-width: 520px;
-  font-size: 1.02rem;
-  line-height: 1.55;
-  color: var(--muted);
+  gap: 6px;
 }
   </style>
 </head>
