--- a/index.html
+++ b/index.html
@@ -452,30 +452,40 @@
 
 <section class="about">
   <div class="about-inner">
+
     <!-- coluna da foto -->
     <div class="about-photo-col">
-  <img src="pag2.png" alt="Mariana Torres" class="about-photo" />
-  <div class="about-name">Mariana Torres</div>
+      <img src="pag2.png" alt="Mariana Torres" class="about-photo" />
 
-  <div class="about-contact">
-    <div class="contact-item">
-      <span class="icon">✉</span>
-      <a href="mailto:teuemail@email.com">mariana1108.torres@gmail.com</a>
+      <!-- NOVO WRAPPER (única mudança) -->
+      <div class="about-meta">
+        <div class="about-name">Mariana Torres</div>
+
+        <div class="about-contact">
+          <div class="contact-item">
+            <span class="icon">✉</span>
+            <a href="mailto:teuemail@email.com">
+              mariana1108.torres@gmail.com
+            </a>
+          </div>
+
+          <div class="contact-item">
+            <span class="icon">☎</span>
+            <a href="tel:+351912345678">
+              +351 912 473 730
+            </a>
+          </div>
+
+          <div class="contact-item">
+            <span class="icon">↗</span>
+            <a href="https://vimeo.com/teuvimeo" target="_blank" rel="noopener">
+              Vimeo
+            </a>
+          </div>
+        </div>
+      </div>
     </div>
 
-    <div class="contact-item">
-      <span class="icon">☎</span>
-      <a href="tel:+351912345678">+351 912 473 730</a>
-    </div>
-
-    <div class="contact-item">
-      <span class="icon">↗</span>
-      <a href="https://vimeo.com/teuvimeo" target="_blank" rel="noopener">
-        Vimeo
-      </a>
-    </div>
-  </div>
-</div>
     <!-- texto à direita -->
     <p class="about-text">
       I work with moving image preservation, analogue film practices,
@@ -485,6 +495,8 @@
       cinematic expanded cinema proposels.
     </p>
 
+  </div>
+</section>
   </div>
 </section>
   </main>
