--- a/index.html
+++ b/index.html
@@ -24,7 +24,91 @@
       --overlay: rgba(6,7,11,.24);
     }
 
-    *{ box-sizing:border-box; }
+    *{ box-sizin/* about section */
+.about{
+  background: #0a0c11; /* almost imperceptible grey */
+  padding: 80px 22px 120px;
+}
+
+.about-inner{
+  max-width: var(--max);
+  margin: 0 auto;
+  display: flex;
+  align-items: flex-start;
+  gap: 20px;
+}
+/* coluna da foto */
+.about-photo-col{
+  display: flex;
+  flex-direction: column; /* foto em cima, meta em baixo */
+  align-items: flex-start;
+}  
+
+/* photo */
+.about-photo{
+  width: 220px;
+  height: 220px;        /* define o frame */
+  object-fit: none;   /* ativa o crop */
+  object-position: -150px -60px;
+  border-radius: 50%; /* Isso cria o efeito circular */
+  opacity: .92;
+  filter: contrast(1.08) sharpen(1);
+}
+.about-meta{
+  margin-top: 14px;
+  display: flex;
+  align-items: baseline;
+  gap: 18px;
+}
+/* nome */
+.about-name{
+  font-family: "Bebas Kai", system-ui, sans-serif;
+  letter-spacing: .18em;
+  font-size: 1rem;
+  color: var(--muted);
+  text-transform: uppercase;
+  white-space: nowrap;
+}
+
+/* contactos em linha */
+.about-contact{
+  display: flex;
+  gap: 16px;
+  font-size: .9rem;
+  color: var(--muted2);
+}
+
+/* cada linha */
+.contact-item{
+  display: flex;
+  align-items: center;
+  gap: 8px; /* espaço entre símbolo e texto */
+}
+
+/* ícones */
+.contact-item .icon{
+  font-size: .85rem;
+  opacity: .75;
+}
+
+/* links */
+.contact-item a{
+  color: inherit;
+  text-decoration: none;
+  border-bottom: 1px solid transparent;
+}
+
+.contact-item a:hover{
+  border-bottom-color: var(--muted2);
+}
+/* text */
+.about-text{
+  max-width: 520px;
+  font-size: 1.02rem;
+  line-height: 1.55;
+  color: var(--muted);
+}
+  </style>g:border-box; }
     html, body{ height:100%; }
 
     body{
@@ -323,96 +407,7 @@
   background: transparent;
 }
 
-/* about section */
-.about{
-  background: #0a0c11; /* almost imperceptible grey */
-  padding: 80px 22px 120px;
-}
 
-.about-inner{
-  max-width: var(--max);
-  margin: 0 auto;
-  display: flex;
-  align-items: flex-start;
-  gap: 20px;
-}
-/* coluna da foto */
-.about-photo-col{
-  display: grid;
-  grid-template-columns: auto 1fr; /* nome | contactos */
-  column-gap: 18px;
-  align-items: baseline;
-  
-}  
-
-}
-
-/* photo */
-.about-photo{
-  width: 220px;
-  height: 220px;        /* define o frame */
-  object-fit: none;   /* ativa o crop */
-  object-position: -150px -60px;
-  border-radius: 50%; /* Isso cria o efeito circular */
-  opacity: .92;
-  filter: contrast(1.08) sharpen(1);
-  display: flex;
-  flex-direction: column; /* foto em cima, nome + contactos abaixo */
-  align-items: flex-start;
-  gap: 12px;
-}
-/* nome */
-.about-name {
-  display: inline-flex;        /* flex horizontal só para o nome + contactos */
-  align-items: baseline;       /* alinha verticalmente */
-  gap: 16px;                   /* espaço entre nome e contactos */
-  font-family: "Bebas Kai", system-ui, sans-serif;
-  letter-spacing: .18em;
-  font-size: 1rem;
-  color: var(--muted);
-  text-transform: uppercase;
-}
-
-/* contactos em linha */
-.about-contact {
-  display: flex;
-  gap: 16px;
-  margin-top: 0; /* remove o espaçamento vertical */
-  font-size: .9rem;
-  color: var(--muted2);
-}
-
-/* cada linha */
-.contact-item{
-  display: flex;
-  align-items: center;
-  gap: 8px; /* espaço entre símbolo e texto */
-}
-
-/* ícones */
-.contact-item .icon{
-  font-size: .85rem;
-  opacity: .75;
-}
-
-/* links */
-.contact-item a{
-  color: inherit;
-  text-decoration: none;
-  border-bottom: 1px solid transparent;
-}
-
-.contact-item a:hover{
-  border-bottom-color: var(--muted2);
-}
-/* text */
-.about-text{
-  max-width: 520px;
-  font-size: 1.02rem;
-  line-height: 1.55;
-  color: var(--muted);
-}
-  </style>
 </head>
 
 <body>
