--- a/index.html
+++ b/index.html
@@ -345,6 +345,16 @@
   flex-shrink: 0; /* não deixa empurrar o texto */
   
 }  
+.about-photo{
+  width: 220px;
+  height: 220px;
+  object-fit: cover;        /* mantém a cara centrada */
+  object-position: center;  /* sem offsets manuais */
+  border-radius: 50%;
+  opacity: .92;
+  filter: contrast(1.08);
+  display: block;           /* imagem volta a ser imagem */
+}
 
 /* nome */
 .about-name{
