--- a/index.html
+++ b/index.html
@@ -134,18 +134,18 @@
       /* (1) micro horizontal move in px */
       right: 191px;
       top: 25px;
-      border-color: rgba(255,255,255,.10);
+      border-color: rgb(185, 222, 255);
 
       /* subtle grey veil (screen behind) */
-      background: rgba(10,12,16,.14);
+      background: rgba(104, 220, 255, 0.953);
       opacity: .72;
       opacity: .82;
 
        background-image: 
     repeating-linear-gradient(
       0deg,
-      rgba(255,255,255,0.01),
-      rgba(255,255,255,0.01) 1px,
+      rgba(251, 255, 174, 0.884),
+      rgba(255, 224, 150, 0.01) 1px,
       transparent 1px,
       transparent 2px
     );
@@ -166,7 +166,7 @@
   background-image: 
     repeating-linear-gradient(
       0deg,
-      rgba(255,255,255,0.005),
+      rgb(251, 251, 206),
       rgba(255,255,255,0.005) 1px,
       transparent 1px,
       transparent 2px
