--- a/index.html
+++ b/index.html
@@ -368,6 +368,8 @@
   color: var(--muted);
   text-transform: uppercase;
   white-space: nowrap;
+   display: block;
+  text-align: center;
 }
 
 /* contactos em linha */
@@ -376,6 +378,9 @@
   gap: 16px;
   font-size: .9rem;
   color: var(--muted2);
+  display: flex;
+  gap: 18px;
+  justify-content: center;
 }
 
 /* cada item */
