--- a/index.html
+++ b/index.html
@@ -343,6 +343,7 @@
   flex-direction: column;
   align-items: center;
   flex-shrink: 0; /* não deixa empurrar o texto */
+   gap: 10px;
   
 }  
 .about-photo{
@@ -370,8 +371,12 @@
   white-space: nowrap;
    display: block;
   text-align: center;
+  letter-spacing: .2em;
 }
-
+.about-contact a:hover{
+  opacity: .85;
+  transform: translateY(-1px);
+}
 /* contactos em linha */
 .about-contact{
   display: flex;
