--- a/index.html
+++ b/index.html
@@ -360,6 +360,12 @@
   align-items: flex-start;
   gap: 12px;
 }
+.about-meta {
+  display: flex;       /* já existe implícito, mas garante flexbox */
+  flex-direction: row; /* muda de column para row */
+  align-items: center; /* alinha verticalmente com o nome */
+  gap: 20px;           /* espaço entre nome e contactos */
+}
 
 /* nome */
 .about-name{
