--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
       line-height: 1.02;
       text-shadow: 0 12px 42px rgba(0,0,0,.55);
       white-space: nowrap;
-      transition: transform 0.3s ease, color 0.3s ease;
+      transition: transform (0.3s ease, color 0.3s ease;
     }
 
     /* (3) subtitle pinned to bottom-left INSIDE front frame */
@@ -300,7 +300,7 @@
   background:
     repeating-linear-gradient(
       0deg,
-      rgba(89, 180, 210, 0.616),
+      rgba(89, 180, 210, 0),
       rgba(246, 255, 149, 0.549) 1px,
       transparent 1px,
       transparent 2px
