--- a/index.html
+++ b/index.html
@@ -362,7 +362,7 @@
 }
 .about-meta {
   display: flex;       /* já existe implícito, mas garante flexbox */
-  flex-direction: row; /* muda de column para row */
+  flex-direction: colum; /* muda de column para row */
   align-items: center; /* alinha verticalmente com o nome */
   gap: 20px;           /* espaço entre nome e contactos */
 }
