--- a/index.html
+++ b/index.html
@@ -388,6 +388,8 @@
   margin-top: 0; /* remove o espaçamento vertical */
   font-size: .9rem;
   color: var(--muted2);
+  align-items: right;
+
 }
 
 /* cada linha */
