--- a/index.html
+++ b/index.html
@@ -388,7 +388,7 @@
   margin-top: 0; /* remove o espaçamento vertical */
   font-size: .9rem;
   color: var(--muted2);
-  align-items: right;
+  align-items: -150px -60px;
 
 }
 
