--- a/about.html
+++ b/about.html
@@ -1,4 +1,11 @@
- <!-- Fonts -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <title>Mariana Torres - About</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+  <!-- Fonts -->
   <link href="https://fonts.cdnfonts.com/css/bebas-kai" rel="stylesheet" />
   <link href="https://fonts.googleapis.com/css2?family=Source+Serif+4:wght@300;400;500;600;700&display=swap" rel="stylesheet" />
 
@@ -8,51 +15,44 @@
       --text:#f2f4f7;
       --muted: rgba(242,244,247,.70);
       --muted2: rgba(242,244,247,.55);
-
       --max: 1120px;
       --hdr-h: 64px;
-
-      --line: rgba(255,255,255,.22);
-      --line-soft: rgba(255,255,255,.14);
-      --overlay: rgba(6,7,11,.24);
     }
 
     *{ box-sizing:border-box; }
-    html, body{ height:100%; }
+    html, body{ height:100%; margin:0; }
 
     body{
-      margin:0;
-      color: var(--text);
       font-family:"Source Serif 4", serif;
-      -webkit-font-smoothing: antialiased;
-      background: url("Timeline2.gif.gif") center/cover no-repeat fixed;
+      color: var(--text);
       background-color: var(--bg);
+      background: url("Timeline2.gif.gif") center/cover no-repeat fixed;
     }
 
-    /* soft layer over GIF */
     body::before{
       content:"";
       position: fixed;
       inset: 0;
       background:
         radial-gradient(1200px 700px at 50% 40%, rgba(6,7,11,.34), rgba(6,7,11,.12) 55%, rgba(6,7,11,.28) 100%),
-        linear-gradient(to bottom, var(--overlay), var(--overlay));
+        linear-gradient(to bottom, rgba(6,7,11,.24), rgba(6,7,11,.24));
       pointer-events:none;
       z-index:0;
     }
 
     header, main{ position: relative; z-index: 1; }
 
-    /* ===== header minimal ===== */
     header{
       position: fixed;
       inset: 0 0 auto 0;
       height: var(--hdr-h);
+      width: 100%;
       z-index: 1000;
       background: linear-gradient(to bottom, rgba(6,7,11,.88), rgba(6,7,11,.35));
       border-bottom: 1px solid rgba(255,255,255,.08);
       backdrop-filter: blur(10px);
     }
+
     nav{
       max-width: var(--max);
       margin:0 auto;
@@ -61,13 +61,14 @@
       display:flex;
       align-items:center;
       justify-content: space-between;
-      gap: 18px;
     }
+
     .brand{
       font-family:"Bebas Kai", system-ui, sans-serif;
       letter-spacing:.18em;
       white-space: nowrap;
     }
+
     .menu{
       list-style:none;
       display:flex;
@@ -77,84 +78,166 @@
       font-size:.94rem;
       color: var(--muted);
     }
+
     .menu a{
       text-decoration:none;
       color: inherit;
       opacity:.9;
       white-space: nowrap;
     }
+
     .menu a:hover{ opacity:1; color: var(--text); }
 
     main{ padding-top: var(--hdr-h); }
-    /* ---------------- ABOUT CONTENT ---------------- */
 
-    main {
-      padding-top: 120px; /* compensa header fixo + espaço respirar */
+    /* ===== about section ===== */
+    .about{
+      background: #0a0c11;
+      padding: 80px 22px 120px;
     }
 
-    .page-title {
-      text-align: left;
-      margin-bottom: 0.5rem;
+    .about-inner{
+      max-width: var(--max);
+      margin: 0 auto;
+      display: flex;
+      align-items: flex-start;
+      gap: 40px;
     }
 
-    .page-title h1 {
-      font-family: "Bebas Kai";
-      font-size: 2.2rem;
-      letter-spacing: 0.16em;
-      margin: 0;
+    /* coluna da foto */
+    .about-photo-col{
+      flex-shrink: 0;
     }
 
-    .page-subtitle {
-      font-size: 0.95rem;
-      color: var(--text-muted);
-      margin-bottom: 1.8rem;
+    .about-photo{
+      width: 220px;
+      height: 220px;
+      object-fit: cover;
+      border-radius: 50%;
+      opacity: .92;
+      filter: contrast(1.08) sharpen(1);
     }
 
-    .about-grid {
-      display: block;
+    /* info: nome + contactos + texto */
+    .about-info{
+      flex:1;
     }
 
-    @media (min-width: 880px) {
-      .about-grid {
-        display: grid;
-        grid-template-columns: minmax(0, 1.4fr) minmax(0, 1fr);
-        column-gap: 40px;
-      }
+    .about-header{
+      display: flex;
+      align-items: center;
+      gap: 20px;
+      flex-wrap: wrap;
+      margin-bottom: 20px;
     }
 
-    .about-text p {
-      font-size: 1rem;
-      line-height: 1.8;
-      margin-bottom: 0.9rem;
+    .about-name{
+      font-family: "Bebas Kai", system-ui, sans-serif;
+      letter-spacing: .18em;
+      font-size: 1.8rem;
+      color: var(--muted);
+      text-transform: uppercase;
+      white-space: nowrap;
     }
 
-   
-
-    .side-block h2 {
-      font-family: "Bebas Kai";
-      font-size: 1.3rem;
-      letter-spacing: 0.16em;
-      margin-bottom: 0.4rem;
+    .about-contact{
+      display: flex;
+      align-items: center;
+      gap: 16px;
+      font-size: .9rem;
+      color: var(--muted2);
     }
 
-    .side-block p {
-      margin-bottom: 0.4rem;
+    .contact-item{
+      display: flex;
+      align-items: center;
+      gap: 6px;
     }
 
-    .side-label {
-      font-weight: 600;
-      color: var(--text-main);
+    .contact-item .icon{
+      font-size: .85rem;
+      opacity: .75;
     }
 
-    .cv-link {
-      display: inline-block;
-      margin-top: 0.7rem;
-      font-size: 0.9rem;
+    .contact-item a{
+      color: inherit;
+      text-decoration: none;
+      border-bottom: 1px solid transparent;
     }
 
-</style>
+    .contact-item a:hover{
+      border-bottom-color: var(--muted2);
+    }
+
+    .about-text{
+      font-size: 1.02rem;
+      line-height: 1.55;
+      color: var(--muted);
+      max-width: 600px;
+    }
+
+    @media (max-width: 720px){
+      .about-inner{ flex-direction: column; align-items: center; gap: 30px; }
+      .about-header{ justify-content: center; }
+      .about-text{ text-align:center; }
+    }
+  </style>
 </head>
+<body>
+  <header>
+    <nav>
+      <div class="brand">MARIANA TORRES</div>
+      <ul class="menu">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="projects.html">Projects</a></li>
+        <li><a href="analogue-film.html">Analogue Film Practice</a></li>
+        <li><a href="writing-publications.html">Writing &amp; Publications</a></li>
+      </ul>
+    </nav>
+  </header>
 
+  <main>
+    <section class="about">
+      <div class="about-inner">
+        <!-- Foto -->
+        <div class="about-photo-col">
+          <img src="pag2.png" alt="Mariana Torres" class="about-photo" />
+        </div>
+
+        <!-- Info: nome + contactos + texto -->
+        <div class="about-info">
+          <div class="about-header">
+            <div class="about-name">Mariana Torres</div>
+
+            <div class="about-contact">
+              <div class="contact-item">
+                <span class="icon">✉</span>
+                <a href="mailto:mariana1108.torres@gmail.com">mariana1108.torres@gmail.com</a>
+              </div>
+
+              <div class="contact-item">
+                <span class="icon">☎</span>
+                <a href="tel:+351912473730">+351 912 473 730</a>
+              </div>
+
+              <div class="contact-item">
+                <span class="icon">↗</span>
+                <a href="https://vimeo.com/teuvimeo" target="_blank" rel="noopener">Vimeo</a>
+              </div>
+            </div>
+          </div>
+
+          <p class="about-text">
+            I work with moving image preservation, analogue film practices,
+            and archival processes, focusing on the transmission of
+            photochemical knowledge and its contemporary relevance,
+            in correlation with the immaterial digital spaces through research and
+            cinematic expanded cinema proposals.
+          </p>
+        </div>
+      </div>
+    </section>
+  </main>
 </body>
 </html>
-
