--- a/index.html
+++ b/index.html
@@ -402,7 +402,7 @@
 /* cada linha */
 .contact-item{
   display: flex;
-  align-items: center;
+  align-items: flex-end;
   gap: 8px; /* espaço entre símbolo e texto */
 }
 
