--- a/about.html
+++ b/about.html
@@ -143,7 +143,7 @@
 
     .about-contact{
       display: flex;
-      align-items: center;
+      align-items: flex-end;
       gap: 16px;
       font-size: .9rem;
       color: var(--muted2);
