--- a/index.html
+++ b/index.html
@@ -468,36 +468,35 @@
 <div class="hero-breath"></div>
 
 <section class="about">
-  <div class="about-inner">
-    <!-- coluna da foto -->
+<div class="about-inner">
+  <!-- Foto -->
   <div class="about-photo-col">
-  <img src="pag2.png" alt="Mariana Torres" class="about-photo" />
-</div>
-
-<div class="about-info">
-  <div class="about-header">
-    <div class="about-name">Mariana Torres</div>
-    <div class="about-contact">
-      <div class="contact-item">
-        <span class="icon">✉</span>
-        <a href="mailto:mariana1108.torres@gmail.com">mariana1108.torres@gmail.com</a>
-      </div>
-
-      <div class="contact-item">
-        <span class="icon">☎</span>
-        <a href="tel:+351912473730">+351 912 473 730</a>
-      </div>
-
-      <div class="contact-item">
-        <span class="icon">↗</span>
-        <a href="https://vimeo.com/teuvimeo" target="_blank" rel="noopener">
-          Vimeo
-        </a>
-      </div>
-    </div>
+    <img src="pag2.png" alt="Mariana Torres" class="about-photo" />
   </div>
 
-  <p class="about-text">
+  <!-- Informação: nome + contactos + texto -->
+  <div class="about-info">
+    <div class="about-header">
+      <div class="about-name">Mariana Torres</div>
+      <div class="about-contact">
+        <div class="contact-item">
+          <span class="icon">✉</span>
+          <a href="mailto:mariana1108.torres@gmail.com">mariana1108.torres@gmail.com</a>
+        </div>
+
+        <div class="contact-item">
+          <span class="icon">☎</span>
+          <a href="tel:+351912473730">+351 912 473 730</a>
+        </div>
+
+        <div class="contact-item">
+          <span class="icon">↗</span>
+          <a href="https://vimeo.com/teuvimeo" target="_blank" rel="noopener">Vimeo</a>
+        </div>
+      </div>
+    </div>
+
+    <p class="about-text">
     I work with moving image preservation, analogue film practices,
     and archival processes, focusing on the transmission of
     photochemical knowledge and its contemporary relevance,
