--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
 /* container do nome + contactos */
 .about-header {
   display: flex;
-  align-items: center; /* alinha verticalmente */
+  align-items: baseline; /* alinha verticalmente */
   gap: 20px; /* espaço entre nome e contactos */
   flex-wrap: wrap; /* evita overflow em telas pequenas */
 } 
