--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
   max-width: var(--max);
   margin: 0 auto;
   display: flex;
-  align-items: flex-start;
+  align-items: flex-end;
   gap: 40px;
 }
 /* coluna da foto */
