--- a/index.html
+++ b/index.html
@@ -347,9 +347,8 @@
 /* container do nome + contactos */
 .about-header {
   display: flex;
-  align-items: baseline; /* alinha verticalmente */
-  gap: 20px; /* espaço entre nome e contactos */
-  flex-wrap: wrap; /* evita overflow em telas pequenas */
+  align-items: baseline; /* mantém nome + contactos alinhados horizontalmente */
+  gap: 20px;
 } 
 
 /* nome */
