--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@
   display: flex;
   flex-direction: column;   /* <<< empilha */
   align-items: flex-start;  /* alinha à esquerda */
-  gap: 8px;                 /* espaço entre nome e contactos */
+  gap: 40%;                 /* espaço entre nome e contactos */
 }
 
 /* nome */
