--- a/about.html
+++ b/about.html
@@ -128,7 +128,7 @@
   display: flex;
   flex-direction: column;   /* <<< empilha */
   align-items: flex-start;  /* alinha à esquerda */
-  gap: -240x;                 /* espaço entre nome e contactos */
+  gap: -360x;                 /* espaço entre nome e contactos */
 }
 
     .about-name{
@@ -146,6 +146,8 @@
       gap: 16px;
       font-size: .9rem;
       color: var(--muted2);
+      order: 2; /* força aparecer depois do texto na visualização */
+     margin-top: 20px;
     }
 
     .contact-item{
