--- a/index.html
+++ b/index.html
@@ -396,6 +396,8 @@
   font-size: .9rem;
   color: var(--muted2);
   flex-wrap: wrap; /* evita overflow */
+  order: 2; /* força aparecer depois do texto na visualização */
+  margin-top: 20px;
 }
 
 /* cada linha */
